[gd_scene load_steps=15 format=3 uid="uid://drxfne1t0ywe2"]

[ext_resource type="Script" uid="uid://wf3m7afhb1bx" path="res://scenes/main scenes/Tutorial/TutorialHowToWin/tutorial_how_to_win.gd" id="1_gan2o"]
[ext_resource type="Shader" uid="uid://tvpfvluk8hvf" path="res://scenes/Menu/fracture_background.gdshader" id="2_0dpyl"]
[ext_resource type="Texture2D" uid="uid://ccwuigx8bnpsp" path="res://assets/background/Fratura_central.jpg" id="3_v2yg4"]
[ext_resource type="PackedScene" uid="uid://se8i2us8xx1p" path="res://scenes/main scenes/Match/pause_button.tscn" id="4_jgxhd"]
[ext_resource type="Theme" uid="uid://deqej4j5brrwu" path="res://fonte/button_theme.tres" id="4_ptf4w"]
[ext_resource type="PackedScene" uid="uid://jt80x3adspxv" path="res://scenes/Cards/card_slot_manager.tscn" id="5_1yam0"]
[ext_resource type="PackedScene" uid="uid://ddkgpa37r2cnu" path="res://scenes/main scenes/Match/score.tscn" id="6_7ksht"]
[ext_resource type="PackedScene" uid="uid://dapf7tew78ua2" path="res://scenes/Cards/card_manager.tscn" id="7_3f0w1"]
[ext_resource type="PackedScene" uid="uid://c3jlm8taxhbp1" path="res://scenes/Secundary Scenes/pointing_arrow.tscn" id="8_0dpyl"]
[ext_resource type="StyleBox" uid="uid://b1glg7x2bravg" path="res://assets/Themes/textBox.tres" id="9_v2yg4"]
[ext_resource type="Script" uid="uid://5hv4pjs1xcht" path="res://addons/richtext2/text_effects/anims/rte_fader.gd" id="10_twwxt"]
[ext_resource type="Script" uid="uid://b6mbstaftpedd" path="res://addons/richtext2/rich_text_animation.gd" id="11_ptf4w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2bqpq"]
shader = ExtResource("2_0dpyl")
shader_parameter/speed = 1.0
shader_parameter/intensity = 1.5

[sub_resource type="RichTextEffect" id="RichTextEffect_ptf4w"]
resource_name = "fader"
script = ExtResource("10_twwxt")
metadata/rt = 12833630822013

[node name="TutorialHowToWin" type="Node2D"]
script = ExtResource("1_gan2o")

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_2bqpq")
position = Vector2(960, 540)
scale = Vector2(1.388, 1.388)
texture = ExtResource("3_v2yg4")

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1741.0
offset_top = 987.0
offset_right = 1870.0
offset_bottom = 1030.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_ptf4w")
theme_override_font_sizes/font_size = 25
text = "Continuar"

[node name="PauseButton" parent="." instance=ExtResource("4_jgxhd")]

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 987.0
offset_right = 179.0
offset_bottom = 1030.0
grow_vertical = 0
theme = ExtResource("4_ptf4w")
theme_override_font_sizes/font_size = 25
text = "Voltar"

[node name="CardSlotManager" parent="." instance=ExtResource("5_1yam0")]

[node name="Score" parent="." instance=ExtResource("6_7ksht")]

[node name="CardManager" parent="." instance=ExtResource("7_3f0w1")]

[node name="PointingArrow" parent="." instance=ExtResource("8_0dpyl")]

[node name="PointingArrow2" parent="." instance=ExtResource("8_0dpyl")]

[node name="PointingArrow3" parent="." instance=ExtResource("8_0dpyl")]

[node name="PointingArrow4" parent="." instance=ExtResource("8_0dpyl")]

[node name="PointingArrow5" parent="." instance=ExtResource("8_0dpyl")]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(440, 540)

[node name="TextBox" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 175)
offset_left = 53.0
offset_top = 642.0
offset_right = 529.0
offset_bottom = 829.0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_styles/normal = ExtResource("9_v2yg4")
bbcode_enabled = true
fit_content = true
custom_effects = [SubResource("RichTextEffect_ptf4w")]
script = ExtResource("11_ptf4w")
progress = 1.0
visible_character = 146
_transforms = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 22, 33), Transform2D(1, 0, 0, 1, 36, 33), Transform2D(1, 0, 0, 1, 52, 33), Transform2D(1, 0, 0, 1, 64, 33), Transform2D(1, 0, 0, 1, 79, 33), Transform2D(1, 0, 0, 1, 91.2, 33), Transform2D(1, 0, 0, 1, 103.2, 33), Transform2D(1, 0, 0, 1, 118.2, 33), Transform2D(1, 0, 0, 1, 134.2, 33), Transform2D(1, 0, 0, 1, 150.2, 33), Transform2D(1, 0, 0, 1, 165.2, 33), Transform2D(1, 0, 0, 1, 172.2, 33), Transform2D(1, 0, 0, 1, 185.2, 33), Transform2D(1, 0, 0, 1, 194.2, 33), Transform2D(1, 0, 0, 1, 209.2, 33), Transform2D(1, 0, 0, 1, 225.2, 33), Transform2D(1, 0, 0, 1, 240.2, 33), Transform2D(1, 0, 0, 1, 256.2, 33), Transform2D(1, 0, 0, 1, 268.4, 33), Transform2D(1, 0, 0, 1, 282.4, 33), Transform2D(1, 0, 0, 1, 294.6, 33), Transform2D(1, 0, 0, 1, 309.6, 33), Transform2D(1, 0, 0, 1, 325.6, 33), Transform2D(1, 0, 0, 1, 337.8, 33), Transform2D(1, 0, 0, 1, 360.8, 33), Transform2D(1, 0, 0, 1, 375.8, 33), Transform2D(1, 0, 0, 1, 382.8, 33), Transform2D(1, 0, 0, 1, 394.8, 33), Transform2D(1, 0, 0, 1, 407, 33), Transform2D(1, 0, 0, 1, 419, 33), Transform2D(1, 0, 0, 1, 426, 33), Transform2D(1, 0, 0, 1, 441, 33), Transform2D(1, 0, 0, 1, 451, 33), Transform2D(1, 0, 0, 1, 463, 33), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 6, 68), Transform2D(1, 0, 0, 1, 25, 68), Transform2D(1, 0, 0, 1, 37, 68), Transform2D(1, 0, 0, 1, 53.25, 68), Transform2D(1, 0, 0, 1, 68.25, 68), Transform2D(1, 0, 0, 1, 83.25, 68), Transform2D(1, 0, 0, 1, 97.25, 68), Transform2D(1, 0, 0, 1, 111.25, 68), Transform2D(1, 0, 0, 1, 125.25, 68), Transform2D(1, 0, 0, 1, 140.25, 68), Transform2D(1, 0, 0, 1, 156.25, 68), Transform2D(1, 0, 0, 1, 171.25, 68), Transform2D(1, 0, 0, 1, 184.25, 68), Transform2D(1, 0, 0, 1, 200.5, 68), Transform2D(1, 0, 0, 1, 223.5, 68), Transform2D(1, 0, 0, 1, 239.5, 68), Transform2D(1, 0, 0, 1, 251.5, 68), Transform2D(1, 0, 0, 1, 261.5, 68), Transform2D(1, 0, 0, 1, 271.5, 68), Transform2D(1, 0, 0, 1, 286.5, 68), Transform2D(1, 0, 0, 1, 310.5, 68), Transform2D(1, 0, 0, 1, 326.75, 68), Transform2D(1, 0, 0, 1, 340.75, 68), Transform2D(1, 0, 0, 1, 357, 68), Transform2D(1, 0, 0, 1, 372, 68), Transform2D(1, 0, 0, 1, 379, 68), Transform2D(1, 0, 0, 1, 388, 68), Transform2D(1, 0, 0, 1, 403, 68), Transform2D(1, 0, 0, 1, 413, 68), Transform2D(1, 0, 0, 1, 428, 68), Transform2D(1, 0, 0, 1, 444, 68), Transform2D(1, 0, 0, 1, 456, 68), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 6, 103), Transform2D(1, 0, 0, 1, 21, 103), Transform2D(1, 0, 0, 1, 35, 103), Transform2D(1, 0, 0, 1, 54.4, 103), Transform2D(1, 0, 0, 1, 69.4, 103), Transform2D(1, 0, 0, 1, 84.4, 103), Transform2D(1, 0, 0, 1, 100.4, 103), Transform2D(1, 0, 0, 1, 110.4, 103), Transform2D(1, 0, 0, 1, 125.4, 103), Transform2D(1, 0, 0, 1, 137.4, 103), Transform2D(1, 0, 0, 1, 144.4, 103), Transform2D(1, 0, 0, 1, 163.8, 103), Transform2D(1, 0, 0, 1, 176.8, 103), Transform2D(1, 0, 0, 1, 191.8, 103), Transform2D(1, 0, 0, 1, 211.2, 103), Transform2D(1, 0, 0, 1, 226.2, 103), Transform2D(1, 0, 0, 1, 242.2, 103), Transform2D(1, 0, 0, 1, 258.2, 103), Transform2D(1, 0, 0, 1, 271.2, 103), Transform2D(1, 0, 0, 1, 285.2, 103), Transform2D(1, 0, 0, 1, 296.2, 103), Transform2D(1, 0, 0, 1, 315.6, 103), Transform2D(1, 0, 0, 1, 329.6, 103), Transform2D(1, 0, 0, 1, 353.6, 103), Transform2D(1, 0, 0, 1, 368.6, 103), Transform2D(1, 0, 0, 1, 383.6, 103), Transform2D(1, 0, 0, 1, 393.6, 103), Transform2D(1, 0, 0, 1, 407.6, 103), Transform2D(1, 0, 0, 1, 427, 103), Transform2D(1, 0, 0, 1, 442, 103), Transform2D(1, 0, 0, 1, 458, 103), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 6, 138), Transform2D(1, 0, 0, 1, 18, 138), Transform2D(1, 0, 0, 1, 25, 138), Transform2D(1, 0, 0, 1, 40, 138), Transform2D(1, 0, 0, 1, 50, 138), Transform2D(1, 0, 0, 1, 62, 138), Transform2D(1, 0, 0, 1, 69, 138), Transform2D(1, 0, 0, 1, 81.6, 138), Transform2D(1, 0, 0, 1, 94.6, 138), Transform2D(1, 0, 0, 1, 109.6, 138), Transform2D(1, 0, 0, 1, 125.6, 138), Transform2D(1, 0, 0, 1, 141.6, 138), Transform2D(1, 0, 0, 1, 155.6, 138), Transform2D(1, 0, 0, 1, 168.2, 138), Transform2D(1, 0, 0, 1, 183.2, 138), Transform2D(1, 0, 0, 1, 199.2, 138), Transform2D(1, 0, 0, 1, 213.2, 138), Transform2D(1, 0, 0, 1, 237.2, 138), Transform2D(1, 0, 0, 1, 249.8, 138), Transform2D(1, 0, 0, 1, 258.8, 138), Transform2D(1, 0, 0, 1, 265.8, 138), Transform2D(1, 0, 0, 1, 279.8, 138), Transform2D(1, 0, 0, 1, 293.8, 138), Transform2D(1, 0, 0, 1, 304.8, 138), Transform2D(1, 0, 0, 1, 317.4, 138), Transform2D(1, 0, 0, 1, 340.4, 138), Transform2D(1, 0, 0, 1, 355.4, 138), Transform2D(1, 0, 0, 1, 362.4, 138), Transform2D(1, 0, 0, 1, 374.4, 138), Transform2D(1, 0, 0, 1, 387, 138), Transform2D(1, 0, 0, 1, 402, 138), Transform2D(1, 0, 0, 1, 417, 138), Transform2D(1, 0, 0, 1, 433, 138), Transform2D(1, 0, 0, 1, 443, 138), Transform2D(1, 0, 0, 1, 458, 138), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 6, 173), Transform2D(1, 0, 0, 1, 21, 173), Transform2D(1, 0, 0, 1, 37, 173), Transform2D(1, 0, 0, 1, 44, 173), Transform2D(1, 0, 0, 1, 53, 173), Transform2D(1, 0, 0, 1, 69, 173), Transform2D(1, 0, 0, 1, 78, 173), Transform2D(1, 0, 0, 1, 93, 173), Transform2D(1, 0, 0, 1, 100, 173)])
_char_size = Array[Vector2]([Vector2(0, 0), Vector2(15, 19), Vector2(14, 19), Vector2(13, 19), Vector2(14, 19), Vector2(0, 19), Vector2(13, 19), Vector2(16, 19), Vector2(14, 19), Vector2(15, 19), Vector2(15, 19), Vector2(7, 19), Vector2(13, 19), Vector2(12, 19), Vector2(14, 19), Vector2(14, 19), Vector2(15, 19), Vector2(16, 19), Vector2(0, 19), Vector2(15, 19), Vector2(0, 19), Vector2(16, 19), Vector2(15, 19), Vector2(0, 19), Vector2(22, 19), Vector2(14, 19), Vector2(7, 19), Vector2(13, 19), Vector2(0, 19), Vector2(13, 19), Vector2(5, 19), Vector2(16, 19), Vector2(12, 19), Vector2(13, 19), Vector2(7, 19), Vector2(0, 0), Vector2(20, 19), Vector2(13, 19), Vector2(0, 19), Vector2(14, 19), Vector2(15, 19), Vector2(16, 19), Vector2(14, 19), Vector2(16, 19), Vector2(16, 19), Vector2(14, 19), Vector2(16, 19), Vector2(13, 19), Vector2(0, 19), Vector2(22, 19), Vector2(16, 19), Vector2(13, 19), Vector2(12, 19), Vector2(11, 19), Vector2(14, 19), Vector2(22, 19), Vector2(0, 19), Vector2(14, 19), Vector2(0, 19), Vector2(15, 19), Vector2(7, 19), Vector2(13, 19), Vector2(15, 19), Vector2(11, 19), Vector2(15, 19), Vector2(14, 19), Vector2(13, 19), Vector2(14, 19), Vector2(0, 0), Vector2(15, 19), Vector2(15, 19), Vector2(0, 19), Vector2(15, 19), Vector2(16, 19), Vector2(14, 19), Vector2(12, 19), Vector2(16, 19), Vector2(13, 19), Vector2(7, 19), Vector2(0, 19), Vector2(14, 19), Vector2(15, 19), Vector2(0, 19), Vector2(14, 19), Vector2(16, 19), Vector2(15, 19), Vector2(16, 19), Vector2(15, 19), Vector2(11, 19), Vector2(0, 19), Vector2(15, 19), Vector2(22, 19), Vector2(15, 19), Vector2(14, 19), Vector2(12, 19), Vector2(15, 19), Vector2(0, 19), Vector2(14, 19), Vector2(16, 19), Vector2(13, 19), Vector2(0, 0), Vector2(13, 19), Vector2(5, 19), Vector2(16, 19), Vector2(12, 19), Vector2(13, 19), Vector2(8, 19), Vector2(0, 19), Vector2(16, 19), Vector2(14, 19), Vector2(14, 19), Vector2(14, 19), Vector2(14, 19), Vector2(0, 19), Vector2(15, 19), Vector2(15, 19), Vector2(15, 19), Vector2(22, 19), Vector2(0, 19), Vector2(12, 19), Vector2(7, 19), Vector2(16, 19), Vector2(15, 19), Vector2(11, 19), Vector2(0, 19), Vector2(22, 19), Vector2(14, 19), Vector2(7, 19), Vector2(13, 19), Vector2(0, 19), Vector2(15, 19), Vector2(16, 19), Vector2(14, 19), Vector2(12, 19), Vector2(16, 19), Vector2(13, 19), Vector2(0, 0), Vector2(14, 19), Vector2(16, 19), Vector2(0, 19), Vector2(12, 19), Vector2(16, 19), Vector2(12, 19), Vector2(14, 19), Vector2(5, 19), Vector2(7, 19)])
_alpha = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_alpha_goal = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_forced_finish_delay = -0.0365197
default_wait_time = 1.0
play_on_bbcode = true
play_speed = 50.0
fade_out = false
fade_in_speed = 10.0
fade_out_speed = 120.0
ctc_offset = Vector2(1, -0.5)
ctc_on_finished = false
ctc_on_wait = false
shortcut_expression = true
shortcut_bookmark = true
signal_quotes = true
signal_stars = true
bbcode = "[fill]Vença conquistando 3 ou mais slots. Os hexágonos mostram a diferença de pontos. Se houver empate nos slots, ganha quem tiver mais pontos no total.[/fill]"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 25
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://b6mbstaftpedd"

[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_return_button_button_up"]
